update the banner section + prevent horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,13 @@
   --input-font-size: 1.5rem;
 }
 
+/** To prevent :horizontal scrolling */
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 html {
   scroll-behavior: smooth;
 }
